Luka, Preethi | #82 | Added a background for header and fixed alignment for the body.

--- a/whp-web/src/main/webapp/styles/standard.css
+++ b/whp-web/src/main/webapp/styles/standard.css
@@ -13,3 +13,7 @@ body {
 .login-btn {
     width: 100px;
 }
+
+.white {
+    background-color: white;
+}
